first commit in new repo; real time messaging